--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main">
-<div class="header background-img-home">
+<div class="header">
     <div class="hnav">
     <nav class="navbar navbar-inverse navbar-static-top" style="background: transparent;">
         <div class="container">
@@ -49,7 +49,7 @@
         <!--/.container-fluid -->
       </nav>
     </div>
-    <div class="background-img-home1">
+    <div class="background-img-home">
       <div class="container text-center">
         <div class="headtxt">
         <h1>Free stock photos, royalty free images</h1>
